<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>edu.neu.ccs.prl.galette</groupId>
        <artifactId>amalthea-acset-integration</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>amalthea-acset-consistency</artifactId>
    <name>Amalthea-ASCET Consistency</name>
    <description>Vitruvius reactions for Amalthea-ASCET transformations</description>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- Model dependency -->
        <dependency>
            <groupId>edu.neu.ccs.prl.galette</groupId>
            <artifactId>amalthea-acset-model</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Vitruvius dependencies for reactions -->
        <dependency>
            <groupId>tools.vitruv</groupId>
            <artifactId>tools.vitruv.change.composite</artifactId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <groupId>tools.vitruv</groupId>
            <artifactId>tools.vitruv.change.propagation</artifactId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <groupId>tools.vitruv</groupId>
            <artifactId>tools.vitruv.dsls.reactions.runtime</artifactId>
            <version>3.1.2</version>
        </dependency>

        <!-- EMF dependency -->
        <dependency>
            <groupId>org.eclipse.emf</groupId>
            <artifactId>org.eclipse.emf.ecore</artifactId>
            <version>2.26.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <release>17</release>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-testCompile</id>
                        <configuration>
                            <release>17</release>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>